js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.6.kt
konst globalVal = 3

inline konst inlineGlobalVal: Int
    get() = 3
